# baguetter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README_CN.md  pyproject.toml  ruff.toml
.github/actions/uv_setup/: action.yml
.github/workflows/: _lint.yml  _release.yml  _test.yml  _test_release.yml
baguetter/: __init__.py  cli.py  enums.py  logger.py  settings.py  types.py
baguetter/evaluation/: __init__.py  eval.py  model_helpers.py
baguetter/evaluation/datasets/: __init__.py  base.py  constants.py  hf_dataset.py
baguetter/fuser/: __init__.py  config.py  fuser.py
baguetter/indices/: __init__.py  base.py  mutli.py  search_engine.py
baguetter/indices/dense/: __init__.py  base.py  config.py  faiss.py  usearch.py
baguetter/indices/sparse/: __init__.py  base.py  bm25.py  bmx.py  config.py
baguetter/indices/sparse/models/: __init__.py
baguetter/utils/: common.py  file_repository.py  model_helpers.py  numba_utils.py  numpy_cache.py  numpy_utils.py  persistable.py  sqlite_key_val.py
benchmarks/: README.md
benchmarks/loco-eval/: eval_loco.py
benchmarks/mteb-eval/: eval_aug_mteb.py  eval_mteb.py
examples/: dense_index.ipynb  embedding_quantization.ipynb  hf_save_idx.ipynb  pre_tokenize.ipynb  reranking.ipynb  save_idx.ipynb
examples/evaluations/: eval.py
tests/: numba_utils_test.py
tests/evaluation/: eval_test.py
tests/indices/dense/: faiss_test.py  usearch_test.py
tests/indices/sparse/: base_test.py  model_test.py  mteb_test.py
tests/mock_utils/: index.py  text_preprocessor.py
(+15 files in other folders)
